Fixed qty going below 0 in bag on mobile view

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -342,6 +342,7 @@ input[name='q']::placeholder {
     .navbar-toggler {
         padding: .6rem .6rem;
         font-size: 1rem;
+        background-color: #DEE0C8;
     }
 
     #delivery-banner h4 {
@@ -359,7 +360,8 @@ input[name='q']::placeholder {
         font-size: .75rem;
     }
 
-    .increment-qty, .decrement-qty {
+    .increment-qty,
+    .decrement-qty {
         padding: .25rem .5rem !important;
     }
 }
